# DynamicalSystems

./: .gitignore  CMakeLists.txt  detailsdialog.h  doublependulumdialog.cpp  doublependulumdialog.h  helpdialog.cpp  helpdialog.h  images.qrc  initialconditionsdialog.cpp  initialconditionsdialog.h  lorenzdialog.cpp  lorenzdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  rosslerdialog.cpp  rosslerdialog.h  systems.h  vanderpoldialog.cpp  vanderpoldialog.h  welcomewindow.cpp  welcomewindow.h
images/: fillColor.py
